--- a/public/style.css
+++ b/public/style.css
@@ -16,7 +16,7 @@ nav {
     background-color: #343a40;
 }
 
-.navigation button {
+.navigation button,.navigation .signform a{
     font-size: 1rem;
     color: #829099;
     background-color: white;
@@ -26,6 +26,7 @@ nav {
     text-decoration: none;
     transition-duration: 0.4s;
     cursor: pointer;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .navigation input {
@@ -39,7 +40,7 @@ nav {
     transition-duration: 0.4s;
 }
 
-.navigation button:hover {
+.navigation button:hover ,.navigation .signform a:hover{
     background-color: #555555;
     color: white;
 }
@@ -71,9 +72,10 @@ nav {
     right: 0;
     margin-top: 0.09rem;
     margin-right: 3%;
-    height: 12rem;
+    height: auto;
     padding: 0 1rem;
     text-align: center;
+   
 
 }
 
@@ -89,5 +91,73 @@ nav {
     transition-duration: 0.4s;
     cursor: pointer;
     margin-top: 1rem;
-
+    margin-bottom: 1rem;
 }
+
+
+
+.bg-img {
+    background-image: url("/img/br.jpg");
+  
+    min-height: 540px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+  }
+
+
+
+  .posting{
+    margin: 3rem 3%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 1rem;
+    
+  }
+
+  .card {
+    /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); */
+    box-shadow: 0 4px 8px 0;
+    background-color: azure;
+    /* max-width: 300px; */
+    /* margin: auto;
+    text-align: center; */
+    width: 24%;
+    position: relative;
+    line-height: .75;
+  }
+
+  .title {
+    color: grey;
+    font-size: 18px;
+  }
+  
+  .card button {
+    border: none;
+    outline: 0;
+    display: inline-block;
+    padding: 8px;
+    color: white;
+    background-color: #000;
+    /* text-align: center; */
+    cursor: pointer;
+    width: 100%;
+    font-size: 18px;
+  }
+  
+  .card a {
+    text-decoration: none;
+    font-size: 22px;
+    color: black;
+  }
+  
+  .card button:hover, .card a:hover {
+    opacity: 0.7;
+  }
+  .description{
+    margin-left: 1rem;
+  }
