posrting secton is donw

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,7 @@
     <title>Landing Page</title>
 </head>
 <style>
-    
+
 </style>
 
 <body class="bg-img">
@@ -22,18 +22,18 @@
             </div>
             <div class="search">
                 <form action="">
-                <input type="textarea" name="search" id="search" placeholder="Search places....">
-                <button>Search</button>
-            </form>
+                    <input type="textarea" name="search" id="search" placeholder="Search places....">
+                    <button>Search</button>
+                </form>
             </div>
             <div class="signform">
                 <% if(!session) {%>
                     <div class="signindiv">
                         <form action="">
-                        <input type="textarea" name="email" id="mail" placeholder="Enter Email...">
-                        <input type="textarea" name="search" id="search" placeholder="Enter Password....">
-                        <button class="signin">Sign in</button>
-                    </form>
+                            <input type="textarea" name="email" id="mail" placeholder="Enter Email...">
+                            <input type="textarea" name="search" id="search" placeholder="Enter Password....">
+                            <button class="signin">Sign in</button>
+                        </form>
                     </div>
                     <!-- <button id="signup" class="signup">Sign up</button> -->
                     <a href="#" class="signup" id="signup">Sign up</a>
@@ -49,35 +49,70 @@
         <br>
         <h2 style="text-align: left; color: white;">Sign up</h2>
         <form action="">
-        <input type="textarea" name="email" id="mail" placeholder="Enter Email..."> <br>
-        <input type="textarea" name="search" id="search" placeholder="Enter Password...."> <br>
-        <input type="textarea" name="email" id="mail" placeholder="Enter Email..."> <br>
-        <input type="textarea" name="search" id="search" placeholder="Enter Password...."> <br>
-        <button class="signin">Sign up</button>
-    </form>
+            <input type="textarea" name="email" id="mail" placeholder="Enter Email..."> <br>
+            <input type="textarea" name="search" id="search" placeholder="Enter Password...."> <br>
+            <input type="textarea" name="email" id="mail" placeholder="Enter Email..."> <br>
+            <input type="textarea" name="search" id="search" placeholder="Enter Password...."> <br>
+            <button class="signin">Sign up</button>
+        </form>
     </div>
 
     <!-- maincontent -->
     <div class="posting">
 
-      <% for(let id = 0; id < file; id++){ %> 
+        <% for(let id=0; id < file; id++){ %>
 
 
-        <div class="card">
-            <img src="https://th.bing.com/th/id/OIP.4b02TNYh6agTq9cRS-OikgHaDv?pid=ImgDet&rs=1" alt="John" style="width:100%">
-            <div class="description">
-            <h1>Price</h1>
-            <h3>Name</h3>
-         
-            <pclass="title">Place</p>
-            <p>Addres</p>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</p>
-            <p>Date</p>
-        </div>
-            <p><button name="<%= id %> ">View</button></p>
-         
-        </div>
-          <% } %> 
+            <div class="card">
+                    <div class="img" style="background-image: url('https://th.bing.com/th/id/OIP.4b02TNYh6agTq9cRS-OikgHaDv?pid=ImgDet&rs=1');">
+                
+                    </div>
+                <div class="description">
+                    <h2>Price</h2>
+                    <h3 class="title">Name</h3>
+                    <div class="address">
+                        <p>1982 SH Sampaloc Manila s been the industry's standard dummy text ever since the 150</p>
+                    </div>
+                    <div class="short">
+                        <strong>Description:</strong>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
+                            has been the industry's standard dummy text ever since the 150 </p>
+                    </div>
+                    <div class="row">
+                        <p class="dateposted">May 02 2012</p>
+                        <p class="title reviews">150 Reviews</p>
+                    </div>
+                </div>
+                <p><button name="<%= id %> ">View</button></p>
+
+            </div>
+          
+
+
+
+            <div class="card">
+                <div class="img" style="background-image: url('/img/br.jpg');">
+                
+                </div>
+                <div class="description">
+                    <h2>12 pesos</h2>
+                    <h3 class="title">Jerick Vegile M. Cataquiz</h3>
+                    <div class="address">
+                        <p>1982 xt ever since the 150</p>
+                    </div>
+                    <div class="short">
+                        <strong>Description:</strong>
+                        <p>Lorem Ipsum is simply dummy text of the prin0 </p>
+                    </div>
+                    <div class="row">
+                        <p class="dateposted">May 12 2022</p>
+                        <p class="title reviews">10 Reviews</p>
+                    </div>
+                </div>
+                <p><button name="<%= id %> ">View</button></p>
+
+            </div>
+            <% } %>
 
 
     </div>
