--- a/views/index.ejs
+++ b/views/index.ejs
@@ -60,18 +60,18 @@
     <!-- maincontent -->
     <div class="posting">
 
-        <% for(let id=0; id < file; id++){ %>
-
+        <% for(let post of file){ %>
 
             <div class="card">
-                    <div class="img" style="background-image: url('https://th.bing.com/th/id/OIP.4b02TNYh6agTq9cRS-OikgHaDv?pid=ImgDet&rs=1');">
-                
-                    </div>
+                <div class="img"
+                    style="background-image: url('<%=post.imgUrl%>');">
+
+                </div>
                 <div class="description">
-                    <h2>Price</h2>
-                    <h3 class="title">Name</h3>
+                    <h2> ₱ <%= post.price %> </h2>
+                    <h3 class="title"><%= post.name %> </h3>
                     <div class="address">
-                        <p>1982 SH Sampaloc Manila s been the industry's standard dummy text ever since the 150</p>
+                        <p><%= post.address %> </p>
                     </div>
                     <div class="short">
                         <strong>Description:</strong>
@@ -79,39 +79,23 @@
                             has been the industry's standard dummy text ever since the 150 </p>
                     </div>
                     <div class="row">
-                        <p class="dateposted">May 02 2012</p>
+                        <p class="dateposted"><%= post.date %> </p>
                         <p class="title reviews">150 Reviews</p>
                     </div>
                 </div>
-                <p><button name="<%= id %> ">View</button></p>
-
+                <p>
+                    <% if(!session) {%>
+                  
+                        <a href="/"  id="view" onclick="notsignin()">View</a>
+                        <% } else{ %>
+                            <a href="/rental/<%= post.id%>"   id="view" >View</a>
+                            <% } %>
+   
             </div>
-          
 
 
 
-            <div class="card">
-                <div class="img" style="background-image: url('/img/br.jpg');">
-                
-                </div>
-                <div class="description">
-                    <h2>12 pesos</h2>
-                    <h3 class="title">Jerick Vegile M. Cataquiz</h3>
-                    <div class="address">
-                        <p>1982 xt ever since the 150</p>
-                    </div>
-                    <div class="short">
-                        <strong>Description:</strong>
-                        <p>Lorem Ipsum is simply dummy text of the prin0 </p>
-                    </div>
-                    <div class="row">
-                        <p class="dateposted">May 12 2022</p>
-                        <p class="title reviews">10 Reviews</p>
-                    </div>
-                </div>
-                <p><button name="<%= id %> ">View</button></p>
 
-            </div>
             <% } %>
 
 
@@ -125,5 +109,13 @@
 
 </body>
 
-
+<script>
+    function notsignin() {
+            alert("Please sign in"); 
+    }
+    function signin() {
+            alert("Sign in"); 
+    }
+    </script>
+    
 </html>
