added profile ejs and post ejs, google map api

--- a/views/post.ejs
+++ b/views/post.ejs
@@ -14,18 +14,9 @@
 </head>
 <body>
     <%- include('navbar') %> 
-    <h1>This is profile</h1>
+    <h1>This is Post</h1>
 
-    <div class="userinfoupdate">
-
-
-
-
-
-    </div>
-    <div class="userpost">
-
-    </div>
+   
     
 </body>
 </html>
