--- a/views/rental.ejs
+++ b/views/rental.ejs
@@ -24,6 +24,9 @@
         width: 100%;
         /* The width is the width of the web page */
     }
+    .search{
+        display: none;
+    }
 </style>
 
 <body>
