--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -2,12 +2,23 @@
     <div class="navigation">
         <div class="logo col">
             <a href="/">Logo</a>
-        </div>
-        <div class="search">
+        </div> 
+        <% if(!session) {%>
+        <div class="search" >
             <form action="">
                 <input type="textarea" name="search" id="search" placeholder="Search places....">
-                <button>Search</button>
+                <button onclick="notsignin()" >Search</button>
             </form>
+            <% } else{ %>
+                <div class="search" >
+                    <form action="">
+                        <input type="textarea" name="search" id="search" placeholder="Search places....">
+                        <button>Search</button>
+                    </form>
+
+                <% } %>
+
+
         </div>
         <div class="signform">
             <% if(!session) {%>
@@ -23,6 +34,7 @@
 
 
                 <% } else{ %>
+                    <a href="/post">Post</a>
                     <a href="/profile">Profile</a>
                     <button class="logout">Log out</button>
                     <% } %>
@@ -34,10 +46,10 @@
     <br>
     <h2 style="text-align: left; color: white;">Sign up</h2>
     <form action="">
+        <input type="textarea" name="email" id="mail" placeholder="Enter Fullname"> <br>
         <input type="textarea" name="email" id="mail" placeholder="Enter Email..."> <br>
         <input type="textarea" name="search" id="search" placeholder="Enter Password...."> <br>
-        <input type="textarea" name="email" id="mail" placeholder="Enter Email..."> <br>
-        <input type="textarea" name="search" id="search" placeholder="Enter Password...."> <br>
+        <input type="textarea" name="search" id="search" placeholder="Re - Enter Password...."> <br>
         <button class="signin">Sign up</button>
     </form>
 </div>
