--- a/public/style.css
+++ b/public/style.css
@@ -22,7 +22,7 @@ nav {
     background-color: #343a40;
 }
 
-.navigation button,.navigation .signform a{
+.navigation button,.navigation .signform a, .user button, .upload button{
     font-size: 1rem;
     color: #829099;
     background-color: white;
@@ -34,8 +34,20 @@ nav {
     cursor: pointer;
     font-family: Arial, Helvetica, sans-serif;
 }
-
-.navigation input {
+.upload button{
+    font-size: 1rem;
+    color: #829099;
+    background-color:black;
+    border: 2px solid #555555;
+    border: none;
+    padding: 10px 22px;
+    text-decoration: none;
+    transition-duration: 0.4s;
+    cursor: pointer;
+    font-family: Arial, Helvetica, sans-serif;
+ margin-top: 2rem;
+}
+.navigation input, .user input {
     font-size: 1rem;
     color: #829099;
     background-color: white;
@@ -45,8 +57,18 @@ nav {
     text-decoration: none;
     transition-duration: 0.4s;
 }
+.upload input {
+  font-size: 1rem;
+  color: #829099;
+  background-color: white;
+  border: 2px solid #555555;
+  padding: 10px 15px;
+  text-decoration: none;
+  transition-duration: 0.4s;
+  width: 100%;
+}
 
-.navigation button:hover ,.navigation .signform a:hover{
+.navigation button:hover ,.navigation .signform a:hover, .user button:hover, .upload button:hover{
     background-color: #555555;
     color: white;
 }
